let s push to 42 git

--- a/rank-2/minitalk/V2/Makefile
+++ b/rank-2/minitalk/V2/Makefile
@@ -8,7 +8,7 @@
 # ║     \ \__\    \ \__\   \ \__\     \ \__\\ \__\   \ \__\       \ \__\     \ \__\ \__\     \ \_______\    \ \__\\ \__\  ║
 # ║      \|__|     \|__|    \|__|      \|__| \|__|    \|__|        \|__|      \|__|\|__|      \|_______|     \|__| \|__|  ║
 # ║                                                                                                                       ║
-# ║   by nduvoid@student.42mulhouse.fr                                                                                    ║
+# ║   by <nduvoid@student.42mulhouse.fr>                                                                                  ║
 # ║                                                                                                                       ║
 # ║                                                                                                                       ║
 # ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
@@ -31,17 +31,31 @@ DIR_INC = includes
 DIR_SRC = src
 DIR_OBJ = .obj
 
+DIR_SERVER = server
+DIR_CLIENT = client
+DIR_CRYPTO = cryptography
+
 SRC_SERVER = server.c
 SRC_CLIENT = client.c
+SRC_CRYPTO =
+
+INC_SERVER = $(DIR_INC)/$(DIR_SERVER)
+INC_CLIENT = $(DIR_INC)/$(DIR_CLIENT)
+INC_CRYPTO = $(DIR_INC)/$(DIR_CRYPTO)
 
 LIBFT = $(DIR_LIBFT)/libft.a
 
-OBJ_SERVER = $(addprefix $(DIR_OBJ)/, $(SRC_SERVER:.c=.o))
-OBJ_CLIENT = $(addprefix $(DIR_OBJ)/, $(SRC_CLIENT:.c=.o))
+SERV_FILES = $(addprefix $(DIR_SRC)/$(DIR_SERVER)/, $(SRC_SERVER))
+CLIE_FILES = $(addprefix $(DIR_SRC)/$(DIR_CLIENT)/, $(SRC_CLIENT))
+CRYP_FILES = $(addprefix $(DIR_SRC)/$(DIR_CRYPTO)/, $(SRC_CRYPTO))
+
+OBJ_SERVER = $(patsubst $(DIR_SRC)/$(DIR_SERVER)/%.c, $(DIR_OBJ)/%.o, $(SERV_FILES))
+OBJ_CLIENT = $(patsubst $(DIR_SRC)/$(DIR_CLIENT)/%.c, $(DIR_OBJ)/%.o, $(CLIE_FILES))
+OBJ_CRYPTO = $(patsubst $(DIR_SRC)/$(DIR_CRYPTO)/%.c, $(DIR_OBJ)/%.o, $(CRYP_FILES))
 
 CC =		cc
 CFLAGS =	-Wall -Wextra -Werror
-IFLAGS =	-I$(DIR_INC) -I$(DIR_LIBFT)
+IFLAGS =	-I$(DIR_INC) -I$(DIR_LIBFT) -I$(INC_CRYPTO)
 DEBUGFLAGS =
 
 # ***************************************************** #
@@ -59,21 +73,30 @@ _client: $(LIBFT) $(NAME_CLIENT)
 _server: $(LIBFT) $(NAME_SERVER)
 
 bonus:
-	$(MAKE) all CFLAGS="$(CFLAGS) -D BONUS=1"
+	-@$(MAKE) $(MAKEFLAGS) CFLAGS="$(CFLAGS) -D BONUS=1"
+	@exit 0
 
 # ***************************************************** #
 # *                  Compiling                        * #
 # ***************************************************** #
 
-$(NAME_SERVER): $(OBJ_SERVER)
-	@$(CC) $(CFLAGS) $(IFLAGS) $(DEBUGFLAGS) -o $@ $^ $(LIBFT)
+$(NAME_SERVER): $(OBJ_SERVER) $(OBJ_CRYPTO)
+	@$(CC) $(CFLAGS) $(IFLAGS) -I$(DIR_INC)/$(DIR_SERVER) $(DEBUGFLAGS) -o $@ $^ $(LIBFT)
 
-$(NAME_CLIENT): $(OBJ_CLIENT)
-	@$(CC) $(CFLAGS) $(IFLAGS) $(DEBUGFLAGS) -o $@ $^ $(LIBFT)
+$(NAME_CLIENT): $(OBJ_CLIENT) $(OBJ_CRYPTO)
+	@$(CC) $(CFLAGS) $(IFLAGS) -I$(DIR_INC)/$(DIR_CLIENT) $(DEBUGFLAGS) -o $@ $^ $(LIBFT)
 
-$(DIR_OBJ)/%.o: $(DIR_SRC)/%.c
+$(DIR_OBJ)/%.o: $(DIR_SRC)/$(DIR_SERVER)/%.c
 	@mkdir -p $(DIR_OBJ)
-	$(call compile_object, $(IFLAGS) $(DEBUGFLAGS), $(OBJ_SERVER) $(OBJ_CLIENT), $(COLOR_YELLOW))
+	$(call compile_object, $(IFLAGS) -I$(INC_SERVER) $(DEBUGFLAGS) -D SERVER, $(DIR_OBJ)/$(notdir $@), $(COLOR_CYAN))
+
+$(DIR_OBJ)/%.o: $(DIR_SRC)/$(DIR_CLIENT)/%.c
+	@mkdir -p $(DIR_OBJ)
+	$(call compile_object, $(IFLAGS) -I$(INC_CLIENT) $(DEBUGFLAGS) -D CLIENT, $(DIR_OBJ)/$(notdir $@), $(COLOR_CYAN))
+
+$(DIR_OBJ)/%.o: $(DIR_SRC)/$(DIR_CRYPTO)/%.c
+	@mkdir -p $(DIR_OBJ)
+	$(call compile_object, $(IFLAGS) -I$(INC_CRYPTO) $(DEBUGFLAGS) -D CRYPTO, $(DIR_OBJ)/$(notdir $@), $(COLOR_CYAN))
 
 $(LIBFT):
 	-@make -C $(DIR_LIBFT) NO_HEADER=true
@@ -115,9 +138,11 @@ debug.fs: debug.fsanitize
 
 .PHONY: write_header echo norm reset_count make_norm compile_object write_goals
 
-echo:
-	@echo "Client: $(OBJ_CLIENT)\n $(SRC_CLIENT)"
-	@echo "Server: $(OBJ_SERVER)\n $(SRC_SERVER)"
+info:
+	$(info SERV_FILES = $(SERV_FILES))
+	$(info CLIE_FILES = $(CLIE_FILES))
+	$(info OBJ_SERVER = $(OBJ_SERVER))
+	$(info OBJ_CLIENT = $(OBJ_CLIENT))
 
 header:
 	@clear
@@ -130,12 +155,11 @@ header:
 	 ║   \ \  \\|__| \   \   \ \  \     \ \  \\ \  \    \ \  \       \ \  \     \ \   __  \     \ \  \        \ \   ___  \     ║ \n \
 	 ║    \ \  \    \ \  \   \ \  \     \ \  \\ \  \    \ \  \       \ \  \     \ \  \ \  \     \ \  \____    \ \  \\  \  \    ║ \n \
 	 ║     \ \__\    \ \__\   \ \__\     \ \__\\ \__\    \ \__\       \ \__\     \ \__\ \__\     \ \_______\   \ \__\\  \__\   ║ \n \
-	 ║      \|__|     \|__|    \|__|      \|__| \|__|    \|__|        \|__|      \|__|\|__|      \|_______|   \|__|   \__|   ║ \n \
+	 ║      \|__|     \|__|    \|__|      \|__| \|__|    \|__|        \|__|      \|__|\|__|      \|_______|    \|__|   \__|  ║ \n \
 	 ║                                                                                                                       ║ \n \
-	 ║    by nduvoid@student.42mulhouse.fr                                                                                   ║ \n"
+	 ║    by <nduvoid@student.42mulhouse.fr>                                                                                 ║ \n"
 	@$(call write_goals)
 	@printf " \
-	 ║                                                                                                                       ║ \n \
 	 ║                                                                                                                       ║ \n \
 	 ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝\n"
 
