almost done, i just don't kwon how to count

--- a/rank-2/minitalk/V2/Makefile
+++ b/rank-2/minitalk/V2/Makefile
@@ -37,21 +37,17 @@ DIR_CRYPTO =
 
 SRC_SERVER = server.c
 SRC_CLIENT = client.c args.c
-SRC_CRYPTO =
 
 INC_SERVER = $(DIR_INC)/$(DIR_SERVER)
 INC_CLIENT = $(DIR_INC)/$(DIR_CLIENT)
-INC_CRYPTO = $(DIR_INC)/$(DIR_CRYPTO)
 
 LIBFT = $(DIR_LIBFT)/libft.a
 
 SERV_FILES = $(addprefix $(DIR_SRC)/$(DIR_SERVER)/, $(SRC_SERVER))
 CLIE_FILES = $(addprefix $(DIR_SRC)/$(DIR_CLIENT)/, $(SRC_CLIENT))
-CRYP_FILES = $(addprefix $(DIR_SRC)/$(DIR_CRYPTO)/, $(SRC_CRYPTO))
 
 OBJ_SERVER = $(patsubst $(DIR_SRC)/$(DIR_SERVER)/%.c, $(DIR_OBJ)/%.o, $(SERV_FILES))
 OBJ_CLIENT = $(patsubst $(DIR_SRC)/$(DIR_CLIENT)/%.c, $(DIR_OBJ)/%.o, $(CLIE_FILES))
-OBJ_CRYPTO = $(patsubst $(DIR_SRC)/$(DIR_CRYPTO)/%.c, $(DIR_OBJ)/%.o, $(CRYP_FILES))
 
 CC =		cc
 CFLAGS =	-Wall -Wextra -Werror
@@ -80,11 +76,11 @@ bonus:
 # *                  Compiling                        * #
 # ***************************************************** #
 
-$(NAME_SERVER): $(OBJ_SERVER) $(OBJ_CRYPTO)
-	@$(CC) $(CFLAGS) $(IFLAGS) -I$(DIR_INC)/$(DIR_SERVER) $(DEBUGFLAGS) -o $@ $^ $(LIBFT)
+$(NAME_SERVER): $(OBJ_SERVER)
+	@$(CC) $(CFLAGS) $(IFLAGS) -I$(DIR_INC)/$(DIR_SERVER) $(DEBUGFLAGS) -D SERVER -o $@ $^ $(LIBFT)
 
-$(NAME_CLIENT): $(OBJ_CLIENT) $(OBJ_CRYPTO)
-	@$(CC) $(CFLAGS) $(IFLAGS) -I$(DIR_INC)/$(DIR_CLIENT) $(DEBUGFLAGS) -o $@ $^ $(LIBFT)
+$(NAME_CLIENT): $(OBJ_CLIENT)
+	@$(CC) $(CFLAGS) $(IFLAGS) -I$(DIR_INC)/$(DIR_CLIENT) $(DEBUGFLAGS) -D CLIENT -o $@ $^ $(LIBFT)
 
 $(DIR_OBJ)/%.o: $(DIR_SRC)/$(DIR_SERVER)/%.c
 	@mkdir -p $(DIR_OBJ)
@@ -93,10 +89,6 @@ $(DIR_OBJ)/%.o: $(DIR_SRC)/$(DIR_SERVER)/%.c
 $(DIR_OBJ)/%.o: $(DIR_SRC)/$(DIR_CLIENT)/%.c
 	@mkdir -p $(DIR_OBJ)
 	$(call compile_object, $(IFLAGS) -I$(INC_CLIENT) $(DEBUGFLAGS) -D CLIENT, $(DIR_OBJ)/$(notdir $@), $(COLOR_CYAN))
-
-$(DIR_OBJ)/%.o: $(DIR_SRC)/$(DIR_CRYPTO)/%.c
-	@mkdir -p $(DIR_OBJ)
-	$(call compile_object, $(IFLAGS) -I$(INC_CRYPTO) $(DEBUGFLAGS) -D CRYPTO, $(DIR_OBJ)/$(notdir $@), $(COLOR_CYAN))
 
 $(LIBFT):
 	-@make -C $(DIR_LIBFT) NO_HEADER=true
