--- a/rank-2/push_swap/libft/ft_printf/Makefile
+++ b/rank-2/push_swap/libft/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: nduvoid <nduvoid@42mulhouse.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/28 09:06:20 by nduvoid           #+#    #+#              #
-#    Updated: 2024/12/11 13:12:37 by nduvoid          ###   ########.fr        #
+#    Updated: 2024/11/21 09:32:50 by nduvoid          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,14 +14,14 @@ NAME = libftprintf.a
 
 SRCDIR =	srcs
 LIBFTDIR =	../src
-OBJDIR =	.obj
+OBJDIR =	./.obj
 LIBFT =		$(LIBFTDIR)/libft.a
 
 SRCS =		ft_printf.c \
 			put_func.c \
 			put_func2.c \
-			put_func3.c
-
+			put_func3.c \
+			utils.c
 SRC =		$(addprefix $(SRCDIR)/, $(SRCS))
 SRCOBJ =	$(patsubst $(SRCDIR)/%.c, $(OBJDIR)/%.o, $(SRC))
 
@@ -34,24 +34,24 @@ CFLAGS =	-Wall -Wextra -Werror
 all: $(LIBFT) $(NAME)
 
 $(LIBFT):
-	@$(MAKE) -C $(LIBFTDIR)
+	$(MAKE) -C $(LIBFTDIR)
 
 $(NAME): $(LIBFT) $(SRCOBJ)
-	@$(AR) $(FLAGS) $(NAME) $(SRCOBJ)
+	$(AR) $(FLAGS) $(NAME) $(SRCOBJ)
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c | $(OBJDIR)
-	@$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(OBJDIR):
-	@mkdir -p $(OBJDIR)
+	mkdir -p $(OBJDIR)
 
 clean:
-	@rm -rf $(OBJDIR)
-	@$(MAKE) -C $(LIBFTDIR) clean
+	rm -rf $(OBJDIR)
+	$(MAKE) -C $(LIBFTDIR) clean
 
 fclean: clean
-	@$(RM) $(NAME)
-	@$(MAKE) -C $(LIBFTDIR) fclean
+	$(RM) $(NAME)
+	$(MAKE) -C $(LIBFTDIR) fclean
 
 re: fclean all
 
