--- a/rank-2/push_swap/src/stack/makefile.supp
+++ b/rank-2/push_swap/src/stack/makefile.supp
@@ -2,7 +2,7 @@ DIR_MODULE_STACK		:= stack
 DIR_INTERFACE_STACK	:= $(DIR_MODULE_STACK)
 DIR_INTERNAL_STACK	:= $(DIR_MODULE_STACK)/_internal
 
-SRC_INTERFACE_STACK	:= stack.c information.c 
+SRC_INTERFACE_STACK	:= information.c stack.c 
 SRC_INTERNAL_STACK	:= push.c swap.c rotate.c memory.c utils.c 
 
 OBJ_STACK			:= $(addprefix $(DIR_OBJ)/$(DIR_INTERFACE_STACK)/, $(SRC_INTERFACE_STACK:.c=.o))
