stack: fonctionnelle, algo: pour 100 +- 50 de trop et pour 500 +- 1500

--- a/rank-2/push_swap/Makefile
+++ b/rank-2/push_swap/Makefile
@@ -23,7 +23,7 @@ DIR_LIBFT	:= libft
 LIBFT		:= $(DIR_LIBFT)/libft.a
 
 # Here we include all the makefile.supp files
-include  src/algo/makefile.supp src/args/makefile.supp src/debug/makefile.supp src/stack/makefile.supp src/utils/makefile.supp src/vizualizer/makefile.supp
+include  src/algo/makefile.supp src/args/makefile.supp src/debug/makefile.supp src/stack/makefile.supp src/utils/makefile.supp #src/vizualizer/makefile.supp
 
 SRC_MAIN	:= push_swap.c
 
