--- a/rank-2/push_swap/src/debug/makefile.supp
+++ b/rank-2/push_swap/src/debug/makefile.supp
@@ -3,7 +3,7 @@ DIR_INTERFACE_DEBUG	:= $(DIR_MODULE_DEBUG)
 DIR_INTERNAL_DEBUG	:= $(DIR_MODULE_DEBUG)/_internal
 
 SRC_INTERFACE_DEBUG	:= debug.c 
-SRC_INTERNAL_DEBUG	:= 
+SRC_INTERNAL_DEBUG	:= _debug.c 
 
 OBJ_DEBUG			:= $(addprefix $(DIR_OBJ)/$(DIR_INTERFACE_DEBUG)/, $(SRC_INTERFACE_DEBUG:.c=.o))
 OBJ_DEBUG			+= $(addprefix $(DIR_OBJ)/$(DIR_INTERNAL_DEBUG)/, $(SRC_INTERNAL_DEBUG:.c=.o))
