--- a/rank-2/push_swap/Makefile
+++ b/rank-2/push_swap/Makefile
@@ -55,7 +55,7 @@ $(LIBFT):
 	@make -C $(DIR_LIBFT) NO_HEADER=true
 
 bonus: all
-	@make -C $(DIR_BONUS) NO_HEADER=true MAKEFLAGS=$(MAKEFLAGS)
+	@make -C $(DIR_BONUS) NO_HEADER=true
 
 # ***************************************************** #
 # *                    Clean Rules                    * #
