philo: starting thread/mutex architecture

--- a/rank-3/Philosophers/philo/Makefile
+++ b/rank-3/Philosophers/philo/Makefile
@@ -19,13 +19,13 @@ DEBUGFLAGS	:=
 DIR_SRC		:= src
 DIR_OBJ		:= .build
 DIR_BONUS	:= 
-INCLUDE_ALL	:=-Iglobal -I$(DIR_SRC)/debug -I$(DIR_SRC)/parsing -I$(DIR_SRC)/threading -I$(DIR_SRC)/utils
+INCLUDE_ALL	:=-Iglobal -I$(DIR_SRC)/debug -I$(DIR_SRC)/parsing -I$(DIR_SRC)/philosopher -I$(DIR_SRC)/threading -I$(DIR_SRC)/utils
 
 DIR_LIBFT	:= #
 LIBFT		:= #$(DIR_LIBFT)/libft.a
 
 # Here we include all the makefile.mk files
-include  src/debug/makefile.mk src/parsing/makefile.mk src/threading/makefile.mk src/utils/makefile.mk
+include  src/debug/makefile.mk src/parsing/makefile.mk src/philosopher/makefile.mk src/threading/makefile.mk src/utils/makefile.mk
 
 SRC_MAIN	:= philo.c
 SRC_BONUS	:=
@@ -33,7 +33,7 @@ SRC_BONUS	:=
 # all object files for the modules
 OBJ_MAIN	:= $(addprefix $(DIR_OBJ)/, $(SRC_MAIN:.c=.o))
 OBJ_BONUS	:= $(addprefix $(DIR_OBJ)/, $(SRC_BONUS:.c=.o))
-OBJ_ALL		:= $(OBJ_DEBUG) $(OBJ_PARSING) $(OBJ_THREADING) $(OBJ_UTILS)
+OBJ_ALL		:= $(OBJ_DEBUG) $(OBJ_PARSING) $(OBJ_PHILOSOPHER) $(OBJ_THREADING) $(OBJ_UTILS)
 
 # ***************************************************** #
 # *                    Rules                          * #
