philo: dark magic patch, now to to patch my skill isus

--- a/rank-3/Philosophers/V1/philo/Makefile
+++ b/rank-3/Philosophers/V1/philo/Makefile
@@ -41,7 +41,7 @@ OBJ_ALL		:= $(OBJ_DEBUG) $(OBJ_PARSING) $(OBJ_PHILOSOPHER) $(OBJ_UTILS)
 
 .PHONY: all
 
-all: header $(NAME) install
+all: header norm $(NAME) install
 
 # ***************************************************** #
 # *                  Compiling                        * #
