--- a/rank-3/Philosophers/V2/philo/Makefile
+++ b/rank-3/Philosophers/V2/philo/Makefile
@@ -19,13 +19,13 @@ DEBUGFLAGS	:=
 DIR_SRC		:= src
 DIR_OBJ		:= .build
 DIR_BONUS	:= 
-INCLUDE_ALL	:=-Iglobal -I$(DIR_SRC)/debug -I$(DIR_SRC)/parsing -I$(DIR_SRC)/philosophers -I$(DIR_SRC)/states -I$(DIR_SRC)/threads -I$(DIR_SRC)/utils
+INCLUDE_ALL	:=-Iglobal -I$(DIR_SRC)/debug -I$(DIR_SRC)/error -I$(DIR_SRC)/parsing -I$(DIR_SRC)/philosophers -I$(DIR_SRC)/states -I$(DIR_SRC)/threads -I$(DIR_SRC)/utils
 
 DIR_LIBFT	:= #
 LIBFT		:= #$(DIR_LIBFT)/libft.a
 
 # Here we include all the makefile.mk files
-include  src/debug/makefile.mk src/parsing/makefile.mk src/philosophers/makefile.mk src/states/makefile.mk src/threads/makefile.mk src/utils/makefile.mk
+include  src/debug/makefile.mk src/error/makefile.mk src/parsing/makefile.mk src/philosophers/makefile.mk src/states/makefile.mk src/threads/makefile.mk src/utils/makefile.mk
 
 SRC_MAIN	:= main.c
 SRC_BONUS	:=
@@ -33,7 +33,7 @@ SRC_BONUS	:=
 # all object files for the modules
 OBJ_MAIN	:= $(addprefix $(DIR_OBJ)/, $(SRC_MAIN:.c=.o))
 OBJ_BONUS	:= $(addprefix $(DIR_OBJ)/, $(SRC_BONUS:.c=.o))
-OBJ_ALL		:= $(OBJ_DEBUG) $(OBJ_PARSING) $(OBJ_PHILOSOPHERS) $(OBJ_STATES) $(OBJ_THREADS) $(OBJ_UTILS)
+OBJ_ALL		:= $(OBJ_DEBUG) $(OBJ_ERROR) $(OBJ_PARSING) $(OBJ_PHILOSOPHERS) $(OBJ_STATES) $(OBJ_THREADS) $(OBJ_UTILS)
 
 # ***************************************************** #
 # *                    Rules                          * #
@@ -109,7 +109,7 @@ header:
 	@echo "# Big Header #"
 
 norm:
-	@errors=$$(norminette --use-gitignore | grep --color=always --exclude-dir={.bzr,CVS,.git,.hg,.svn,.idea,.tox} "Error"); \
+	@errors=$$(norminette --use-gitignore | grep --color=always "Error"); \
 	if [ -n "$$errors" ]; then \
 		echo "$$errors"; \
 		echo "\033[31m ❌ Norminette errors found \033[0m"; \
