no data race but dont work for even number of philo (da fuck)

--- a/rank-3/Philosophers/V2/philo/Makefile
+++ b/rank-3/Philosophers/V2/philo/Makefile
@@ -14,7 +14,7 @@ NAME		:= philo
 BONUS		:=
 
 CC			:= cc
-CFLAGS		:= -Wall -Wextra -Werror -MMD
+CFLAGS		+= -Wall -Wextra -Werror -MMD
 DEBUGFLAGS	:= 
 DIR_SRC		:= src
 DIR_OBJ		:= .build
