philo: interface ok until NB_COL - 1 / 10 (da fuck)

--- a/rank-3/Philosophers/V2/philo/Makefile
+++ b/rank-3/Philosophers/V2/philo/Makefile
@@ -1,4 +1,17 @@
-# Big Header #
+#  \
+# ╔════════════════════════════════════════════════════════════════════════════════════════════╗
+# ║                                                                                            ║
+# ║       ________        ___  ___          ___          ___               ________            ║
+# ║      |\   __  \      |\  \|\  \        |\  \        |\  \             |\   __  \           ║
+# ║      \ \  \|\  \     \ \  \ \  \       \ \  \       \ \  \            \ \  \|\  \          ║
+# ║       \ \   ____\     \ \   __  \       \ \  \       \ \  \            \ \  \ \  \         ║
+# ║        \ \  \___|      \ \  \ \  \       \ \  \       \ \  \____        \ \  \ \  \        ║
+# ║         \ \__\          \ \__\ \__\       \ \__\       \ \_______\       \ \_______\       ║
+# ║          \|__|           \|__|\|__|        \|__|        \|_______|        \|_______|       ║
+# ║                                                                                            ║
+# ║    By: nduvoid <nduvoid@student.42mulhouse.fr>                                             ║
+# ║    A 42 cursus Project                                                                     ║
+# ╚════════════════════════════════════════════════════════════════════════════════════════════╝\n
 
 # ***************************************************** #
 # *                 Configuation                      * #
@@ -19,13 +32,13 @@ DEBUGFLAGS	:=
 DIR_SRC		:= src
 DIR_OBJ		:= .build
 DIR_BONUS	:= 
-INCLUDE_ALL	:=-Iglobal -I$(DIR_SRC)/debug -I$(DIR_SRC)/error -I$(DIR_SRC)/parsing -I$(DIR_SRC)/philosophers -I$(DIR_SRC)/states -I$(DIR_SRC)/threads -I$(DIR_SRC)/utils
+INCLUDE_ALL	:=-Iglobal -I$(DIR_SRC)/debug -I$(DIR_SRC)/interface -I$(DIR_SRC)/parsing -I$(DIR_SRC)/philosophers -I$(DIR_SRC)/states -I$(DIR_SRC)/threads -I$(DIR_SRC)/utils
 
 DIR_LIBFT	:= #
 LIBFT		:= #$(DIR_LIBFT)/libft.a
 
 # Here we include all the makefile.mk files
-include  src/debug/makefile.mk src/error/makefile.mk src/parsing/makefile.mk src/philosophers/makefile.mk src/states/makefile.mk src/threads/makefile.mk src/utils/makefile.mk
+include  src/debug/makefile.mk src/interface/makefile.mk src/parsing/makefile.mk src/philosophers/makefile.mk src/states/makefile.mk src/threads/makefile.mk src/utils/makefile.mk
 
 SRC_MAIN	:= main.c
 SRC_BONUS	:=
@@ -33,7 +46,7 @@ SRC_BONUS	:=
 # all object files for the modules
 OBJ_MAIN	:= $(addprefix $(DIR_OBJ)/, $(SRC_MAIN:.c=.o))
 OBJ_BONUS	:= $(addprefix $(DIR_OBJ)/, $(SRC_BONUS:.c=.o))
-OBJ_ALL		:= $(OBJ_DEBUG) $(OBJ_ERROR) $(OBJ_PARSING) $(OBJ_PHILOSOPHERS) $(OBJ_STATES) $(OBJ_THREADS) $(OBJ_UTILS)
+OBJ_ALL		:= $(OBJ_DEBUG) $(OBJ_INTERFACE) $(OBJ_PARSING) $(OBJ_PHILOSOPHERS) $(OBJ_STATES) $(OBJ_THREADS) $(OBJ_UTILS)
 
 # ***************************************************** #
 # *                    Rules                          * #
@@ -106,7 +119,20 @@ debug.pg:
 .PHONY: header norm crazy test install uninstall update hellgrind
 
 header:
-	@echo "# Big Header #"
+	@echo " \
+╔════════════════════════════════════════════════════════════════════════════════════════════╗\n \
+║                                                                                            ║\n \
+║       ________        ___  ___          ___          ___               ________            ║\n \
+║      |\   __  \      |\  \|\  \        |\  \        |\  \             |\   __  \           ║\n \
+║      \ \  \|\  \     \ \  \ \  \       \ \  \       \ \  \            \ \  \|\  \          ║\n \
+║       \ \   ____\     \ \   __  \       \ \  \       \ \  \            \ \  \ \  \         ║\n \
+║        \ \  \___|      \ \  \ \  \       \ \  \       \ \  \____        \ \  \ \  \        ║\n \
+║         \ \__\          \ \__\ \__\       \ \__\       \ \_______\       \ \_______\       ║\n \
+║          \|__|           \|__|\|__|        \|__|        \|_______|        \|_______|       ║\n \
+║                                                                                            ║\n \
+║    By: nduvoid <nduvoid@student.42mulhouse.fr>                                             ║\n \
+║    A 42 cursus Project                                                                     ║\n \
+╚════════════════════════════════════════════════════════════════════════════════════════════╝\n"
 
 norm:
 	@errors=$$(norminette --use-gitignore | grep --color=always "Error"); \
