philo bonus: update the global fclean rule

--- a/rank-3/Philosophers/V2/Makefile
+++ b/rank-3/Philosophers/V2/Makefile
@@ -64,6 +64,7 @@ clean:
 fclean:
 	@make -C $(DIR_MANDATORY) fclean $(MAKEFLAGS)
 	@make -C $(DIR_BONUS) fclean $(MAKEFLAGS)
+	@rm -rf $(DIR_BIN)
 #@make fclean -C $(DIR_LIBFT)
 
 re: fclean all
