philo: last push before evaluation

--- a/rank-3/Philosophers/V2/Makefile
+++ b/rank-3/Philosophers/V2/Makefile
@@ -33,7 +33,7 @@ DIR_BIN			:= .bin
 
 .PHONY: all
 
-all: header norm mandatory
+all: header mandatory
 
 # ***************************************************** #
 # *                  Compiling                        * #
