Rush: add Connect4 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "rank-3/minishell"]
 	path = rank-3/minishell
 	url = https://github.com/Chahalor/Minishell.git
+[submodule "Rushes/Connect4"]
+	path = Rushes/Connect4
+	url = https://github.com/Chahalor/connect4
