--- a/cpp/cpp-4/ex00/Makefile
+++ b/cpp/cpp-4/ex00/Makefile
@@ -1,4 +1,4 @@
-NAME		:= trap
+NAME		:= polymophism
 CC			:= c++
 CFLAGS		:= -Wall -Wextra -Werror -Wno-deprecated -std=c++98 -MMD -g3 -Iall #-Ino-shadow
 
@@ -18,7 +18,7 @@ $(DIR_BUILD):
 	mkdir -p $(DIR_BUILD)
 
 $(NAME): $(OBJS) $(ALL)
-	$(CC) $(CFLAGS) -o $@ $^ -lSDL2
+	$(CC) $(CFLAGS) -o $@ $^
 
 $(ALL):
 	$(MAKE) -C $(DIR_ALL) CFLAGS="$(CFLAGS)"
